[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/world/store-bg.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/gui/mostro-normal.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/gui/mostro-hover.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/gui/la_micki-normal.png" type="Texture" id=4]
[ext_resource path="res://src/scenes/Store.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/gui/panda-normal.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/gui/la_micki-hover.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/gui/panda-hover.png" type="Texture" id=8]
[ext_resource path="res://resources/StyleBoxFlat/StorePrice.tres" type="StyleBox" id=9]
[ext_resource path="res://resources/DynamicFont/CalendarTitle-HungryPro16.tres" type="DynamicFont" id=10]

[node name="Store" type="Node2D"]
script = ExtResource( 5 )

[node name="Fondo" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Price_01" type="Label" parent="."]
visible = false
margin_left = 154.586
margin_top = 73.8435
margin_right = 196.586
margin_bottom = 88.8435
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.262745, 0.203922, 0.333333, 1 )
text = "$5.000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price_02" type="Label" parent="."]
visible = false
margin_left = 47.0
margin_top = 175.0
margin_right = 96.0
margin_bottom = 190.0
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.262745, 0.203922, 0.333333, 1 )
text = "$15.000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price_03" type="Label" parent="."]
visible = false
margin_left = 96.0
margin_top = 44.0
margin_right = 145.0
margin_bottom = 59.0
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.262745, 0.203922, 0.333333, 1 )
text = "$30.000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gift_01" type="TextureButton" parent="."]
margin_left = 158.0
margin_top = 87.0
margin_right = 200.0
margin_bottom = 129.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gift_02" type="TextureButton" parent="."]
margin_left = 50.0
margin_top = 127.0
margin_right = 92.0
margin_bottom = 169.0
rect_scale = Vector2( 1.2, 1.2 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gift_03" type="TextureButton" parent="."]
margin_left = 99.0
margin_top = 60.0
margin_right = 141.0
margin_bottom = 102.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
